--- a/BankSystem.Application/BankSystem.Application.csproj
+++ b/BankSystem.Application/BankSystem.Application.csproj
@@ -7,8 +7,13 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.Hosting.Abstractions" Version="9.0.0" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\BankSystem.Domain\BankSystem.Domain.csproj" />
     <ProjectReference Include="..\BankSystem.Repository\BankSystem.Repository.csproj" />
+    <ProjectReference Include="..\BankSystem.SQL.Server\BankSystem.SQL.Server.csproj" />
   </ItemGroup>
 
 </Project>
