--- a/BankSystemApi/appsettings.json
+++ b/BankSystemApi/appsettings.json
@@ -5,8 +5,13 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*",
   "ConnectionStrings": {
     "BankSystemConnectionString": "Data Source=DESKTOP-7B66A0I\\SQLEXPRESS;Initial Catalog=BankSystem;Integrated Security=True;Connect Timeout=30;Encrypt=False;Trust Server Certificate=True;Application Intent=ReadWrite;Multi Subnet Failover=False"
+  },
+  "JwtSettings": {
+    "JwtKey": ""your-strong-jwt-secret-key-here"",
+    "Issuer": "YourIssuer",
+    "Audience": "YourAudience",
+    "SecretKey": "YourSuperSecretKey"
   }
 }
