--- a/BankSystemApi/appsettings.json
+++ b/BankSystemApi/appsettings.json
@@ -9,7 +9,7 @@
     "BankSystemConnectionString": "Data Source=DESKTOP-7B66A0I\\SQLEXPRESS;Initial Catalog=BankSystem;Integrated Security=True;Connect Timeout=30;Encrypt=False;Trust Server Certificate=True;Application Intent=ReadWrite;Multi Subnet Failover=False"
   },
   "JwtSettings": {
-    "JwtKey": ""your-strong-jwt-secret-key-here"",
+    "JwtKey": "ThisIsA256BitMinimumLengthKey123!",
     "Issuer": "YourIssuer",
     "Audience": "YourAudience",
     "SecretKey": "YourSuperSecretKey"
