--- a/BankSystemApi/appsettings.json
+++ b/BankSystemApi/appsettings.json
@@ -11,7 +11,6 @@
   "JwtSettings": {
     "JwtKey": "ThisIsA256BitMinimumLengthKey123!",
     "Issuer": "YourIssuer",
-    "Audience": "YourAudience",
-    "SecretKey": "YourSuperSecretKey"
+    "Audience": "YourAudience"
   }
 }
